--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   "devDependencies": {
     "autoprefixer": "^9.6.0",
     "babel-loader": "^8.0.6",
+    "browser-sync-webpack-plugin": "^2.2.2",
     "css-loader": "^3.0.0",
     "cssnano": "^4.1.10",
     "globby": "^10.0.1",
