--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "babel-loader": "^8.0.6",
     "browser-sync": "^2.26.7",
     "browser-sync-webpack-plugin": "^2.2.2",
+    "color": "^3.1.2",
     "css-loader": "^3.0.0",
     "cssnano": "^4.1.10",
     "globby": "^10.0.1",
