--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
   },
   "devDependencies": {
     "@arcgis/webpack-plugin": "^4.12.2",
+    "@typescript-eslint/eslint-plugin": "^2.3.0",
+    "@typescript-eslint/parser": "^2.3.0",
     "autoprefixer": "^9.6.0",
     "babel-loader": "^8.0.6",
     "browser-sync": "^2.26.7",
@@ -41,6 +43,14 @@
     "color": "^3.1.2",
     "css-loader": "^3.0.0",
     "cssnano": "^4.1.10",
+    "eslint": "^6.4.0",
+    "eslint-config-airbnb-base": "^14.0.0",
+    "eslint-config-standard": "^14.1.0",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-node": "^10.0.0",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-standard": "^4.0.1",
+    "eslint-plugin-vue": "^5.2.3",
     "globby": "^10.0.1",
     "html-webpack-plugin": "^3.2.0",
     "import-glob-loader": "^1.1.0",
@@ -50,6 +60,7 @@
     "resolve-url-loader": "^3.1.0",
     "sass-loader": "^7.1.0",
     "tailwindcss": "^1.0.5",
+    "typescript": "^3.6.3",
     "vue-loader": "^15.7.1",
     "vue-template-compiler": "^2.6.10",
     "webpack": "^4.35.2",
