Update build configuration Newest pattern lab In line with production build of vue projects

--- a/.babelrc
+++ b/.babelrc
@@ -1,10 +1,9 @@
 {
     "presets": [
-        [
-            "@babel/preset-env",
-            {
-                "modules": "amd"
-            }
-        ]
+        "@babel/preset-env",
+        "@babel/typescript"
+    ],
+    "plugins": [
+        "@babel/plugin-transform-modules-amd"
     ]
 }
