--- a/package.json
+++ b/package.json
@@ -23,19 +23,23 @@
   },
   "homepage": "https://github.com/eGovPDX/portland-pattern-lab#readme",
   "dependencies": {
-    "@pattern-lab/cli": "^0.0.3",
-    "@pattern-lab/core": "^3.0.5",
-    "@pattern-lab/engine-twig-php": "^3.0.6",
-    "@pattern-lab/starterkit-twig-demo": "^4.1.1",
-    "@pattern-lab/uikit-workshop": "^1.0.1",
+    "@pattern-lab/cli": "^5.0.0",
+    "@pattern-lab/core": "^5.0.0",
+    "@pattern-lab/engine-twig-php": "^5.0.0",
+    "@pattern-lab/starterkit-twig-demo": "^5.0.0",
+    "@pattern-lab/uikit-workshop": "^5.0.0",
     "@types/arcgis-js-api": "^4.13.0",
     "vue": "^2.6.10",
-    "vuex": "^3.1.1"
+    "vuex": "^3.1.2"
   },
   "devDependencies": {
     "@arcgis/webpack-plugin": "^4.13.0",
-    "@typescript-eslint/eslint-plugin": "^2.6.1",
-    "@typescript-eslint/parser": "^2.6.1",
+    "@babel/plugin-transform-modules-amd": "^7.5.0",
+    "@babel/preset-typescript": "^7.7.2",
+    "@typescript-eslint/eslint-plugin": "^2.7.0",
+    "@typescript-eslint/parser": "^2.7.0",
+    "@vue/eslint-config-prettier": "~5.0.0",
+    "@vue/eslint-config-typescript": "~4.0.0",
     "autoprefixer": "^9.7.1",
     "babel-loader": "^8.0.6",
     "browser-sync": "^2.26.7",
@@ -53,13 +57,14 @@
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.1",
     "eslint-plugin-vue": "^5.2.3",
+    "friendly-errors-webpack-plugin": "^1.7.0",
     "globby": "^10.0.1",
     "html-webpack-plugin": "^3.2.0",
     "import-glob-loader": "^1.1.0",
     "mini-css-extract-plugin": "^0.7.0",
     "node-sass": "^4.13.0",
     "postcss-loader": "^3.0.0",
-    "resolve-url-loader": "^3.1.0",
+    "resolve-url-loader": "^3.1.1",
     "sass-loader": "^7.3.1",
     "tailwindcss": "^1.1.3",
     "typescript": "^3.7.2",
