--- a/package.json
+++ b/package.json
@@ -34,8 +34,11 @@
   },
   "devDependencies": {
     "@arcgis/webpack-plugin": "^4.13.0",
+    "@babel/core": "^7.0.0",
     "@babel/plugin-transform-modules-amd": "^7.5.0",
+    "@babel/preset-env": "~7.4.1",
     "@babel/preset-typescript": "^7.7.2",
+    "@types/node": "^12.12.7",
     "@typescript-eslint/eslint-plugin": "^2.7.0",
     "@typescript-eslint/parser": "^2.7.0",
     "@vue/eslint-config-prettier": "~5.0.0",
@@ -44,6 +47,7 @@
     "babel-loader": "^8.0.6",
     "browser-sync": "^2.26.7",
     "browser-sync-webpack-plugin": "^2.2.2",
+    "cache-loader": "^4.1.0",
     "color": "^3.1.2",
     "css-loader": "^3.2.0",
     "cssnano": "^4.1.10",
@@ -51,12 +55,14 @@
     "eslint-config-airbnb-base": "^14.0.0",
     "eslint-config-prettier": "^6.5.0",
     "eslint-config-standard": "^14.1.0",
+    "eslint-loader": "^3.0.2",
     "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-node": "^10.0.0",
     "eslint-plugin-prettier": "^3.1.1",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.1",
     "eslint-plugin-vue": "^5.2.3",
+    "fork-ts-checker-webpack-plugin": "^3.1.0",
     "friendly-errors-webpack-plugin": "^1.7.0",
     "globby": "^10.0.1",
     "html-webpack-plugin": "^3.2.0",
@@ -67,6 +73,8 @@
     "resolve-url-loader": "^3.1.1",
     "sass-loader": "^7.3.1",
     "tailwindcss": "^1.1.3",
+    "ts-loader": "^6.2.1",
+    "tslint": "^5.20.1",
     "typescript": "^3.7.2",
     "vue-loader": "^15.7.2",
     "vue-template-compiler": "^2.6.10",
