--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,7 @@
     "moduleResolution": "node",
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
+    "resolveJsonModule": true,
     "sourceMap": true,
     "baseUrl": ".",
     "lib": [
@@ -18,8 +19,7 @@
     ]
   },
   "include": [
-    "source/**/*.ts",
-    "source/**/*.ts"
+    "source/_patterns/**/*.ts",
   ],
   "exclude": [
     "node_modules"
