--- a/package.json
+++ b/package.json
@@ -23,63 +23,65 @@
   },
   "homepage": "https://github.com/eGovPDX/portland-pattern-lab#readme",
   "dependencies": {
-    "@pattern-lab/cli": "^5.0.0",
-    "@pattern-lab/core": "^5.0.0",
-    "@pattern-lab/engine-twig-php": "^5.0.0",
+    "@pattern-lab/cli": "^5.7.0",
+    "@pattern-lab/core": "^5.7.0",
+    "@pattern-lab/engine-twig-php": "^5.7.1",
     "@pattern-lab/starterkit-twig-demo": "^5.0.0",
-    "@pattern-lab/uikit-workshop": "^5.0.0",
-    "@types/arcgis-js-api": "^4.13.0",
-    "vue": "^2.6.10",
-    "vuex": "^3.1.2"
+    "@pattern-lab/uikit-workshop": "^5.7.1",
+    "@types/arcgis-js-api": "^4.14.0",
+    "vue": "^2.6.11",
+    "vuex": "^3.1.3"
   },
   "devDependencies": {
-    "@arcgis/webpack-plugin": "^4.13.0",
-    "@babel/core": "^7.0.0",
-    "@babel/plugin-transform-modules-amd": "^7.5.0",
+    "@arcgis/webpack-plugin": "^4.14.2",
+    "@babel/core": "^7.9.0",
+    "@babel/plugin-transform-modules-amd": "^7.9.0",
     "@babel/preset-env": "~7.4.1",
-    "@babel/preset-typescript": "^7.7.2",
-    "@types/node": "^12.12.7",
-    "@typescript-eslint/eslint-plugin": "^2.7.0",
-    "@typescript-eslint/parser": "^2.7.0",
-    "@vue/eslint-config-prettier": "~5.0.0",
-    "@vue/eslint-config-typescript": "~4.0.0",
-    "autoprefixer": "^9.7.1",
-    "babel-loader": "^8.0.6",
+    "@babel/preset-typescript": "^7.9.0",
+    "@types/node": "^12.12.30",
+    "@typescript-eslint/eslint-plugin": "^2.24.0",
+    "@typescript-eslint/parser": "^2.24.0",
+    "@vue/eslint-config-prettier": "~6.0.0",
+    "@vue/eslint-config-typescript": "~5.0.0",
+    "autoprefixer": "^9.7.4",
+    "babel-loader": "^8.1.0",
     "browser-sync": "^2.26.7",
     "browser-sync-webpack-plugin": "^2.2.2",
     "cache-loader": "^4.1.0",
     "color": "^3.1.2",
-    "css-loader": "^3.2.0",
+    "css-loader": "^3.4.2",
     "cssnano": "^4.1.10",
-    "eslint": "^6.6.0",
-    "eslint-config-airbnb-base": "^14.0.0",
-    "eslint-config-prettier": "^6.5.0",
-    "eslint-config-standard": "^14.1.0",
-    "eslint-loader": "^3.0.2",
-    "eslint-plugin-import": "^2.18.2",
+    "eslint": "^6.8.0",
+    "eslint-config-airbnb-base": "^14.1.0",
+    "eslint-config-prettier": "^6.10.1",
+    "eslint-config-standard": "^14.1.1",
+    "eslint-loader": "^3.0.3",
+    "eslint-plugin-import": "^2.20.1",
     "eslint-plugin-node": "^10.0.0",
-    "eslint-plugin-prettier": "^3.1.1",
+    "eslint-plugin-prettier": "^3.1.2",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.1",
-    "eslint-plugin-vue": "^5.2.3",
-    "fork-ts-checker-webpack-plugin": "^3.1.0",
+    "eslint-plugin-vue": "^6.2.0",
+    "fork-ts-checker-webpack-plugin": "^3.1.1",
     "friendly-errors-webpack-plugin": "^1.7.0",
-    "globby": "^10.0.1",
+    "globby": "^10.0.2",
     "html-webpack-plugin": "^3.2.0",
     "import-glob-loader": "^1.1.0",
+    "lit-html": "^1.2.1",
     "mini-css-extract-plugin": "^0.7.0",
-    "node-sass": "^4.13.0",
+    "node-sass": "^4.13.1",
     "postcss-loader": "^3.0.0",
+    "react": "^16.13.1",
     "resolve-url-loader": "^3.1.1",
     "sass-loader": "^7.3.1",
-    "tailwindcss": "^1.1.3",
-    "ts-loader": "^6.2.1",
+    "tailwindcss": "^1.2.0",
+    "ts-loader": "^6.2.2",
     "tslint": "^5.20.1",
-    "typescript": "^3.7.2",
-    "vue-loader": "^15.7.2",
-    "vue-template-compiler": "^2.6.10",
-    "webpack": "^4.41.2",
-    "webpack-cli": "^3.3.10",
+    "typescript": "^3.8.3",
+    "vue-loader": "^15.9.1",
+    "vue-template-compiler": "^2.6.11",
+    "webpack": "^4.42.0",
+    "webpack-cli": "^3.3.11",
     "webpack-merge": "^4.2.2"
   }
 }
